test/errors/error9.base
Error: /Users/leonardo/Development/vult/vult/test/errors/error9.vult:1:20-20: Expecting a string with a link name or a tag
external foo() : int;
                    ^
